fixing the database issue, as well as adding .env.example\

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "extends": "@smol-code/tsconfig",
     "compilerOptions": {
+      "lib": [
+        "ES6"
+      ],
       "outDir": "./build",
       "baseUrl": "./src",
       "strictPropertyInitialization": false,
