not sure what changed here

--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,4 @@ TYPEORM_DATABASE = './db.sqlite'
 
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = dist/models/*.js
+TYPEORM_ENTITIES = build/src/models/*.js
