--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auxilor-verification",
   "packageManager": "yarn@3.0.2",
   "main": "index.js",
+  "license": "ISC",
   "scripts": {
     "build": "rm -rf build && tsc",
     "start": "yarn build && node index.js"
