--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "petitio": "^1.3.2",
     "slash-create": "^4.1.1",
     "source-map-support": "^0.5.20",
+    "tslog": "^3.2.2",
     "typeorm": "^0.2.37"
   }
 }
